
syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message Post {
    string post_id = 1;
    string user_id = 2;
    string content = 3;
    string first_name = 4;
    string username = 5;
    string profile_image = 6;
    repeated string image_urls = 7;
    google.protobuf.Timestamp timestamp = 8;
    PostMetrics metrics = 9;
    // TODO: Consider using User for the user's details
    bool is_verified = 10;
    int64 followings_counts = 11;
    int64 followers_counts = 12;
    optional string reason = 13;
    optional string title = 14;
}

message PostMetrics {
  int32 likes = 1;
  int32 views = 2;
  int32 reposts = 3;
  int32 comments = 4;
  bool liked = 5;
}

message PostUpdate {
    string post_id = 1;
    oneof update {
      string content = 2;
      bool deleted = 3;
    }
    google.protobuf.Timestamp timestamp = 4;

  }

// Message for updates to post metrics, e.g., likes
message PostMetricsUpdate {
    string post_id = 1;
    int32 likes = 2;
    int32 views = 3;
    int32 reposts = 4;
    int32 comments = 5;
    bool liked = 6;
}

message PostRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

// Response message for the post stream
message PostStreamResponse {
    oneof data {
        Post post = 1;
        PostMetricsUpdate metrics_update = 2;
    }
    bool has_more = 3;
}

message GetPostRequest {
    string post_id = 1;
}